Bug Fix: menu/ref bug and z-index

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -140,154 +140,166 @@
   position: fixed;
   top: 0;
   background-color: white;
-  z-index: 5;
+  z-index: 2;
   transition: height .2s ease-in-out;
 
   .headerWrapper {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    max-width: 1400px;
-    min-width: 1000px;
+    justify-content: center;
+    width: 100vw;
     height: 100%;
     background-color: white;
 
-    .homeLink {
+    .navWrapper {
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: space-between;
+      max-width: 1400px;
+      min-width: 1000px;
+      height: 100%;
 
-      .logo {
-        transition: width .2s ease-in-out, transform .2s ease-in-out;
-        width: 200px;
-        margin: 0;
-        margin-right: 2rem;
-        padding: 0;
-        fill: var(--backgroundDarkOpaque);
-      }
+      .homeLink {
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-      .title {
-        transition: font-size .2s ease-in-out, color .2s ease-in-out;
-        margin: 0rem 6rem 0rem 1rem;
-        font-size: 26px;
-        color: var(--fontMenu);
-      }
-
-      &:hover {
         .logo {
-          transform: rotate(-5deg);
+          transition: width .2s ease-in-out, transform .2s ease-in-out;
+          width: 200px;
+          margin: 0;
+          margin-right: 2rem;
+          padding: 0;
+          fill: var(--backgroundDarkOpaque);
         }
 
         .title {
-          color: var(--highlight);
+          transition: font-size .2s ease-in-out, color .2s ease-in-out;
+          margin: 0rem 6rem 0rem 1rem;
+          font-size: 26px;
+          color: var(--fontMenu);
         }
-      }
-    }
 
-    .menuContainer {
-      background-color: rgba(255, 255, 255, .9);
-      transition: right .2s ease-in-out;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+        &:hover {
+          .logo {
+            transform: rotate(-5deg);
+          }
 
-      &.subMenuSlide {
-        right: 100%;
-      }
-
-      .menu {
-        display: flex;
-        align-items: center;
-        height: 100%;
-        max-height: 60vh;
-        font-size: var(--menuItemFontSize);
-
-        nav {
-          margin-bottom: var(--menuItemHeight);
-
-          a {
-            color: var(--fontMenu);
-            font-size: 16px;
-            transition: color .1s ease-in-out;
-
-            &:hover {
-              color: var(--highlight);
-            }
+          .title {
+            color: var(--highlight);
           }
         }
+      }
 
-        .menuEntry {
-          position: relative;
-          margin: 0;
-          margin-right: 1rem;
-          // z-index: 4;
+      .menuContainer {
+        background-color: rgba(255, 255, 255, .9);
+        transition: right .2s ease-in-out;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-          .subMenuContainer {
-            position: absolute;
-            width: 300px;
-            top: 30px;
-            opacity: 0;
-            background-color: rgba(255, 255, 255, 1);
-            transition: opacity .2s ease-in-out, top .2s ease-in-out;
-            margin: 0;
-            height: auto;
-            z-index: -6;
-            border-radius: 10px;
+        &.subMenuSlide {
+          right: 100%;
+        }
 
-            // sub menu arrow:
-            &:after {
-              content: "";
-              position: absolute;
-              top: -15px;
-              left: 20px;
-              width: 0;
-              height: 0;
-              border-left: 15px solid transparent;
-              border-right: 15px solid transparent;
-              border-bottom: 15px solid white;
-            }
+        .menu {
+          display: flex;
+          align-items: center;
+          height: 100%;
+          max-height: 60vh;
+          font-size: var(--menuItemFontSize);
 
-            &.closed {
-              opacity: 0;
-              top: -200px;
-            }
-
-            &.open {
-              opacity: 1;
-              top: 79px;
-            }
+          nav {
+            margin-bottom: var(--menuItemHeight);
 
             a {
-              margin: 1rem;
               color: var(--fontMenu);
-              white-space: nowrap;
+              font-size: 16px;
+              transition: color .1s ease-in-out;
 
               &:hover {
                 color: var(--highlight);
               }
             }
+          }
 
-            nav {
-              display: flex;
-              flex-direction: column;
+          .menuEntry {
+            position: relative;
+            margin: 0;
+            margin-right: 1rem;
+
+
+            .subMenuContainer {
+              position: absolute;
+              width: 300px;
+              top: 30px;
+              right: 0;
+              opacity: 0;
+              background-color: rgba(255, 255, 255, 1);
+              transition: opacity .2s ease-in-out, top .2s ease-in-out;
               margin: 0;
-              z-index: -1;
+              height: auto;
+              z-index: -2;
+              border-radius: 10px;
+
+
+              // sub menu arrow:
+              &:after {
+                content: "";
+                position: absolute;
+                top: -15px;
+                right: 20px;
+                width: 0;
+                height: 0;
+                border-left: 15px solid transparent;
+                border-right: 15px solid transparent;
+                border-bottom: 15px solid white;
+              }
+
+              &.closed {
+                opacity: 0;
+                top: -200px;
+              }
+
+              &.open {
+                opacity: 1;
+                top: 79px;
+              }
+
+              a {
+                margin: 1rem;
+                color: var(--fontMenu);
+                white-space: nowrap;
+
+                &:hover {
+                  color: var(--highlight);
+                }
+              }
+
+              nav {
+                display: flex;
+                flex-direction: column;
+                margin: 0;
+                z-index: -1;
+              }
             }
           }
         }
-      }
-      .selector {
-        position: fixed;
-        top: 63px;
-        height: 3px;
-        background-color: var(--highlight);
-        transform: skewX(-30deg);
-        transition: all 0.2s ease-in-out;
-        z-index: 999;
-        opacity: 4;
+
+        .selector {
+          position: fixed;
+          top: 63px;
+          height: 3px;
+          background-color: var(--highlight);
+          transform: skewX(-30deg);
+          transition: all 0.2s ease-in-out;
+          z-index: 999;
+          opacity: 4;
+        }
       }
     }
   }
+
 
   &.scrolled {
     height: 70px;
@@ -301,6 +313,7 @@
         font-size: 20px;
       }
     }
+
     .menuContainer {
       .selector {
         top: 47px;
